src/test/ui/match/match-unresolved-one-arm.stderr
error[E0282]: type annotations needed
  --> $DIR/match-unresolved-one-arm.rs:4:9
   |
LL |     let x = match () {
   |         ^ cannot infer type
   |
help: consider giving this binding a type
   |
LL |     let x: Type = match () {
   |          ^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
